--- a/train_dlite.ipynb
+++ b/train_dlite.ipynb
@@ -6,7 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from train.utils import train, SEED\n",
+    "% pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from train.utils import train, create_response, load_model_and_tokenizer, SEED\n",
     "import datetime as dt\n",
     "import os"
    ]
@@ -17,7 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_dir = '_'.join(['DLite1.5b', '_'.join(str(dt.datetime.now()).split()).replace(':', '-')])\n",
+    "output_dir = os.path.join(os.path.expanduser('~'), '_'.join(['DLite1.5b', '_'.join(str(dt.datetime.now()).split()).replace(':', '-')]))\n",
+    "print(f'Output path: {output_dir}')\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)"
    ]
@@ -38,6 +48,27 @@
     "    gradient_checkpointing = True,\n",
     "    cuda = True\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model, tokenizer = load_model_and_tokenizer(output_dir)\n",
+    "\n",
+    "# Set of example prompts\n",
+    "eval_prompts = [\n",
+    "    'Write a tweet announcing DLite, a large language model from AI Squared.',\n",
+    "    'Write a poem.',\n",
+    "    'How many legs do dogs typically have?',\n",
+    "    'Explain the concept of deep learning.'\n",
+    "]\n",
+    "\n",
+    "for prompt in eval_prompts:\n",
+    "    response = create_response(prompt, model = model, tokenizer = tokenizer)\n",
+    "    print(f'Prompt: {prompt}\\n\\n{response}\\n\\n-----------\\n')"
    ]
   }
  ],
