Changing parameter count in name

--- a/train_dlite.ipynb
+++ b/train_dlite.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_dir = os.path.join(os.path.expanduser('~'), '_'.join(['DLite1.5b', '_'.join(str(dt.datetime.now()).split()).replace(':', '-')]))\n",
+    "output_dir = os.path.join(os.path.expanduser('~'), '_'.join(['DLite120m', '_'.join(str(dt.datetime.now()).split()).replace(':', '-')]))\n",
     "print(f'Output path: {output_dir}')\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)"
