--- a/train_dlite.ipynb
+++ b/train_dlite.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training DLite\n",
+    "\n",
+    "This notebook fine-tunes the smallest GPT2 model on the Alpaca dataset.\n",
+    "\n",
+    "Please note the license requirements for both GPT2 and the Alpaca dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -34,7 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_dir = os.path.join(os.path.expanduser('~'), '_'.join(['DLite120m', '_'.join(str(dt.datetime.now()).split()).replace(':', '-')]))\n",
+    "# Assign the output directory and create it\n",
+    "output_dir = os.path.join(os.path.expanduser('~'), '_'.join(['DLite124m', '_'.join(str(dt.datetime.now()).split()).replace(':', '-')]))\n",
     "print(f'Output path: {output_dir}')\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)"
@@ -46,12 +59,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run the train function\n",
     "train(\n",
     "    output_dir,\n",
     "    epochs = 10,\n",
     "    train_batch_size = 16,\n",
     "    eval_batch_size = 16,\n",
-    "    lr = 5e-5,\n",
+    "    lr = 1e-5,\n",
     "    seed = SEED,\n",
     "    gradient_checkpointing = True,\n",
     "    cuda = True\n",
@@ -64,6 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the saved model and tokenizer\n",
     "model, tokenizer = load_model_and_tokenizer(output_dir)\n",
     "\n",
     "# Set of example prompts\n",
@@ -74,6 +89,7 @@
     "    'Explain the concept of deep learning.'\n",
     "]\n",
     "\n",
+    "# Ask DLite to answer the prompts listed above\n",
     "for prompt in eval_prompts:\n",
     "    response = create_response(prompt, model = model, tokenizer = tokenizer)\n",
     "    print(f'Prompt: {prompt}\\n\\n{response}\\n\\n-----------\\n')"
@@ -96,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
